tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/weak-import.wyst
module corpus.linker_boundaries_bad

import weak symbol "optional_hook" as optional_hook: extern "C" fn()
